Bản sao services-360/infra/k8s/app/dev/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: residential-management-dev
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
