Bản sao services-360/infra/k8s/app/dev/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: residential-management-dev
  labels:
    app.kubernetes.io/name: residential-management
    app.kubernetes.io/component: redis
spec:
  selector:
    app.kubernetes.io/name: residential-management
    app.kubernetes.io/component: redis
  ports:
    - port: 6379
      targetPort: 6379
